--- a/public/chat.html
+++ b/public/chat.html
@@ -24,12 +24,11 @@
           <h2 id="room-name"></h2>
           <h3><i class="fas fa-users"></i>Users</h3>
           <ul id="users"></ul>
-          <a id="profile-btn" class="btn">profile</a>
-
         </div>
         <div class="chat-messages"></div>
       </main>
       <div class="chat-form-container">
+      </ul>
         <form id="chat-form">
           <input
             id="receiver"
@@ -42,7 +41,7 @@
           <input
             id="msg"
             type="text"
-            placeholder="Enter Message"
+            placeholder="Enter Message....."
             required
             autocomplete="off"
           />
