--- a/public/index.html
+++ b/public/index.html
@@ -29,6 +29,15 @@
 							placeholder="Enter username..."
 							required
 						/>
+
+						<label for="username">Password</label>
+						<input
+							type="Password"
+							name="Password"
+							id="password"
+							placeholder="Enter Password..."
+							required
+						/>
 					</div>
 					<div class="form-control">
 						<label for="room">Room</label>
