--- a/public/chat.html
+++ b/public/chat.html
@@ -56,6 +56,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script src="js/main.js"></script>
+    <script src="js/index.js"></script>
   </body>
 </html>
