--- a/public/index.html
+++ b/public/index.html
@@ -50,5 +50,9 @@
 				</form>
 			</main>
 		</div>
+		
+		<footer>
+			<p>&copy; 2025 Chat-App. All rights reserved.</p>
+		</footer>
 	</body>
 </html>
