--- a/public/chat.html
+++ b/public/chat.html
@@ -28,16 +28,20 @@
         <div class="chat-messages"></div>
       </main>
       <div class="chat-form-container">
-      </ul>
+        <!-- Private Chat: User Selection -->
+        <div id="private-chat-controls" style="display: none;">
+          <div class="user-selection">
+            <label for="user-select">
+              <i class="fas fa-user"></i> Send to:
+            </label>
+            <select id="user-select">
+              <option value="">Select a user...</option>
+            </select>
+          </div>
+        </div>
+        
+        <!-- Message Form -->
         <form id="chat-form">
-          <input
-            id="receiver"
-            type="text"
-            name="receiver"
-            placeholder="Enter receiver's username"
-            required
-            autocomplete="off"
-          />
           <input
             id="msg"
             type="text"
@@ -45,7 +49,7 @@
             required
             autocomplete="off"
           />
-           <button class="btn"><i class="fas fa-paper-plane"></i>Send</button>
+          <button class="btn"><i class="fas fa-paper-plane"></i>Send</button>
         </form>
       </div>
     </div>
